# esp32_synth

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  HiiroFoxDSP.h  i2s_audio.c  i2s_audio.h  keyboard.c  keyboard.h  lcd.c  lcd.h  main.cpp  main2.cpp  main3.cpp  my_adc.c  my_adc.h  rp-303.h  st7735_ll_contex.cpp  st7735_ll_contex.h  uart_midi.c  uart_midi.h
main/gui/: bound.h  color.h  component.cpp  component.h  component_peer.cpp  component_peer.h  graphic.cpp  graphic.h  gui_config.h  ll_context.h  main_window.h  msg_queue.h  my_color_trait.h  my_driver.h  my_font.cpp  my_font.h  my_frame.cpp  my_frame.cpp.impl  my_frame.h  my_graphic.cpp  my_graphic.h  my_render.cpp.impl  my_render.h  timer_queue.cpp  timer_queue.h  timer_task.h
main/gui/render/: my_render.cpp
main/model/: add_osc.cpp  add_osc.h  cordic.h  dr.h  dr.s  freq_sin_table.c  global_model.c  my_fp.h  my_fp.s  my_math.h  phase_sin_table.c  poly_synth.h  sin2cos_table.c  synth_model.h  table.h  table_gen.py  table_helper.h
main/ui/: adc_panel.h  debug_panel.cpp  debug_panel.h  ili9340.c  ili9340.h  keyboard_panel.cpp  keyboard_panel.h  lcd_driver2.cpp  lcd_driver2.h  my_events.h  osc_panel.h  setting_panel.cpp  setting_panel.h  st7735_color.cpp  st7735_color.h  st7735_driver.cpp  st7735_driver.h  table_panel.cpp  table_panel.h  top_window.h  tracker_panel.h
